envoy_proxy/server/envoy-proxy.yaml
# static_resources:
#   listeners:
#   - address:
#       socket_address:
#         address: 0.0.0.0
#         port_value: 8811
#     filter_chains:
#     - filters:
#       - name: envoy.filters.network.http_connection_manager
#         typed_config:
#           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#           codec_type: AUTO
#           stat_prefix: ingress_http
#           access_log:
#           - name: envoy.access_loggers.stdout
#             typed_config:
#               "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
#           route_config:
#             name: local_route
#             virtual_hosts:
#             - name: backend
#               domains:
#               - "*"
#               routes:
#               - match:
#                   prefix: "/"
#                   grpc: {}
#                 route:
#                   cluster: backend_grpc_service
#                   timeout: 0s
#           http_filters:
#           - name: envoy.filters.http.router
#             typed_config:
#               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
#   clusters:
#   - name: backend_grpc_service
#     http2_protocol_options:
#       initial_stream_window_size: 65536
#       initial_connection_window_size: 65536
#       connection_keepalive:
#         interval: "1s"
#         timeout: "2s"
#         connection_idle_interval: "3s"
#     type: STRICT_DNS
#     lb_policy: ROUND_ROBIN
#     typed_extension_protocol_options:
#       envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
#         "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
#         explicit_http_config:
#           http2_protocol_options: {}
#     load_assignment:
#       cluster_name: backend_grpc_service
#       endpoints:
#       - lb_endpoints:
#         - endpoint:
#             address:
#               socket_address:
#                 address: 192.168.112.9
#                 port_value: 50051
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8811
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: service_envoyproxy_io

  clusters:
  - name: service_envoyproxy_io
    http2_protocol_options:
      initial_stream_window_size: 65536
      initial_connection_window_size: 65536
      connection_keepalive:
        interval: "1s"
        timeout: "2s"
        connection_idle_interval: "3s"
    # type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 192.168.112.9
                port_value: 50051
